--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <!--        </section>-->
         
         <div class='content' style='display:flex'>
-            <img src = "image/IMG_1144 2 copy.JPG" style = "width: 30%; height: 30%"/>
+            <img src = "image/self.jpg" style = "width: 30%; height: 30%"/>
             <div>
                 <div class="intro">
                     <div class="row">
