--- a/cv.html
+++ b/cv.html
@@ -1,1 +1,2 @@
-<iframe src="https://docs.google.com/gview?url=https://github.com/Luhao-Zhang/cv/raw/main/Luhao_Zhang_CV_data.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+<iframe src="https://docs.google.com/gview?url=https://github.com/Luhao-Zhang/CV_LuhaoZhang/raw/main/Luhao%20Zhang%201.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+<!-- <iframe src="https://docs.google.com/gview?url=https://github.com/Luhao-Zhang/cv/raw/main/Luhao_Zhang_CV_data.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe> -->
