--- a/index.html
+++ b/index.html
@@ -139,19 +139,17 @@
 
   <h1 id="about-me">About me</h1>
 
-  <p>I am now a fifth year graduate student in <a href="https://www.ma.utexas.edu">Mathematics Department</a> at The University of Texas at Austin, advised by <a href="https://web.ma.utexas.edu/users/zariphop/index.shtml">Prof. Thaleia Zariphopoulou</a>.</p>
-  
-  <p> My research lies at the intersection of data-driven decision making under uncertainty, stochastic and robust optimization, and mechine learning. Specifically, 
+  <p>I am currently a doctoral student in the <a href="https://www.ma.utexas.edu">Department of Mathematics</a> at the University of Texas at Austin. My research lies at the intersection of data-driven decision making under uncertainty, stochastic and robust optimization, and machine learning. Specifically, 
     <ul>
-      <li><b>Data-driven decision making under uncertainty</b>. In particular, I develop robust and computationally efficient methodology with strong performance guarantees for decision-making problems involving contextual/observational data, arising in the area of machine learning, risk management and revenue management.</li>
-      <li><b>Stochastic optimization</b>. My recent research includes applying stochastic control techniques to explore the optimal way to acquire information dynamically to facilitate decision-making in portfolio management and optimal trading. </li>
+      <li><b>Data-driven Decision Making under Uncertainty with Side Information</b>. I develop robust and computationally efficient methodology with strong performance guarantees for decision-making problems involving contextual data. My works generate real-world impact and have industrial applications in supply chain management, revenue management, and fair machine learning. </li>
+      <li><b>Optimal Information Acquisition</b>. I develop stochastic control models that explore the optimal way to acquire information dynamically, and make a trade-off between the costly information learning and the expected return of the decision, given the limited information. My works draw inspiration from important real-world applications, including mechanism design and robo-advising. </li>
       <!-- <li><b>Data-driven decision making under uncertainty</b>. In particular, I develop robust and computationally efficient methodology with strong performance guarantees for learning and decision-making problems involving contextual/observational data, arising in the area of machine learning, risk management and revenue management.</li> -->
     </ul>
   </p>
   
 <!--  <p>My main research studies financial mathematics, stochastic optimization and data-driven decision making under uncertainty. In particular, I develop robust and computationally efficient methodology with strong performance guarantees for learning and decision-making problems involving contextual/observational data, arising in the area of machine learning, risk management and revenue management.</p>-->
-
-  <p>I received my bachelor degree in <span>Mathematics and Applied Mathematics (Honors Science Group, 珠峰计划)</span> at <a href="http://en.xjtu.edu.cn">Xi’an Jiaotong University</a>, where I was also a student of the <a href="https://en.wikipedia.org/wiki/Special_Class_for_the_Gifted_Young#Xi'an_Jiaotong_University">Speical Class for the Gifted Youth Program (少年班)</a> before my undergraduate study.</p>
+<p>My Ph.D. advisor is <a href="https://web.ma.utexas.edu/users/zariphop/index.shtml">Prof. Thaleia Zariphopoulou</a>. My doctoral committee members include Profs. <a href="https://web.ma.utexas.edu/users/zariphop/index.shtml">Rui Gao</a>, Irene M. Gamba, Mihai Sirbu, and Stathis Tompaidis.</p>
+  <p>I received my bachelor degree in <span>Mathematics and Applied Mathematics (Honors Program)</span> at <a href="http://en.xjtu.edu.cn">Xi’an Jiaotong University</a> in China, where I was also a student of the <a href="https://en.wikipedia.org/wiki/Special_Class_for_the_Gifted_Young#Xi'an_Jiaotong_University">Speical Class for the Gifted Young</a> before my undergraduate study.</p>
 
 </div>
 
