--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
     <h1 id="teaching&working">Teaching & Services</h1>
     <h3 id="teaching">Teaching</h1>
 
-    <p>I am interesting in teaching mathematics, and I have taught several topics as including:</p>
+    <p>I am interesting in teaching a wide range of courses, including different topics in probability, statistics, and optimization. I have taught several topics as following:</p>
 
     <ul>
       <li>
