--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
                             <!-- <p class="intro-desc"><span>Mathematics Ph.D. Candidate in UT Austin</span></p> -->
                                                 
                             <p class="lead">
-                            Department of Mathematics
+                            Department of IEOR
                             <br>
-                            The University of Texas at Austin
+                            Columbia University
                             <br>
-                            2515 Speedway, PMA 8.100
+                            500 W. 120th Street
                             <br>
-                            Austin, TX 78712, USA
+                            New York, NY 10027, USA
                             </p>
                                                
                         </div>
@@ -50,7 +50,7 @@
                         <div class="col-md-8 col-md-offset-2">
                             <div class="social">
                                 <a href="mailto:luhaozhang@utexas.edu" target=
-                                    "_blank"><i class="fa fa-envelope fa-3x"> <span>luhaozhang@utexas.edu</span></i></a>
+                                    "_blank"><i class="fa fa-envelope fa-3x"> <span>zl6782@columbia.edu</span></i></a>
                             </div><!-- /social -->
                             <div class="social">
 <!--                                <a href=-->
@@ -139,10 +139,9 @@
 
   <h1 id="about-me">About me</h1>
 
-  <p>I am currently a Ph.D. candidate in the <a href="https://www.ma.utexas.edu">Department of Mathematics</a> at the University of Texas at Austin. </p>
-  <p>I will join the <a href="https://www.ieor.columbia.edu">Department of Industrial Engineering and Operations Research</a> at Columbia University as <strong>Postdoctoral Research Scientist</strong> in September 2023, supervised by <a href="https://www.engineering.columbia.edu/faculty/xunyu-zhou">Prof. Xun Yu Zhou</a>.</p>
-  <p>I will join the <a href="https://engineering.jhu.edu/ams/">Department of Applied Mathematics and Statistics</a> at The Johns Hopkins University as <strong>Assistant Professor</strong> in July 2024.</p> 
-  <p>My Ph.D. advisor is <a href="https://web.ma.utexas.edu/users/zariphop/index.shtml">Prof. Thaleia Zariphopoulou</a>. My doctoral committee members include Profs. <a href="https://web.ma.utexas.edu/users/zariphop/index.shtml">Rui Gao</a>, Irene M. Gamba, Mihai Sirbu, and Stathis Tompaidis.</p>  
+  <p>I am currently a <strong>Postdoctoral Research Scientist</strong> in the <a href="https://www.ieor.columbia.edu">Department of Industrial Engineering and Operations Research</a> at Columbia University, supervised by <a href="https://www.engineering.columbia.edu/faculty/xunyu-zhou">Prof. Xunyu Zhou</a>.</p>
+  <p>I will join the <a href="https://engineering.jhu.edu/ams/">Department of Applied Mathematics and Statistics</a> at Johns Hopkins University as <strong>Assistant Professor</strong> in July 2024.</p> 
+  <p>I completed my Ph.D. in the <a href="https://www.ma.utexas.edu">Department of Mathematics</a> at the University of Texas at Austin, under the supervision of <a href="https://web.ma.utexas.edu/users/zariphop/index.shtml">Prof. Thaleia Zariphopoulou</a>. My doctoral committee members include Profs. <a href="https://web.ma.utexas.edu/users/zariphop/index.shtml">Rui Gao</a>, Irene M. Gamba, Mihai Sirbu, and Stathis Tompaidis.</p>  
   <p>My research lies at the intersection of data-driven decision making under uncertainty, stochastic and robust optimization, and machine learning. Specifically, 
     <ul>
       <li><b>Data-driven Decision Making under Uncertainty with Side Information</b>. I develop robust and computationally efficient methodology with strong performance guarantees for decision-making problems involving contextual data. My works generate real-world impact and have industrial applications in supply chain management, revenue management, and fair machine learning. </li>
