--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                     <div class="row">
                         <div class="col-md-8 col-md-offset-2">
                             <div class="social">
-                                <a href="mailto:luhaozhang@utexas.edu" target=
-                                    "_blank"><i class="fa fa-envelope fa-3x"> <span>zl6782@columbia.edu</span></i></a>
+                                <a href="mailto:lz2487@columbia.edu" target=
+                                    "_blank"><i class="fa fa-envelope fa-3x"> <span>lz2487@columbia.edu</span></i></a>
                             </div><!-- /social -->
                             <div class="social">
 <!--                                <a href=-->
