--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         (2023)</a>,  <strong><i>Management Science</i></strong>.</p>
     </li>
     <li>
-      <p>Luhao Zhang, Mohsen Ghassemi, Ivan Brugere, Alan Mishle, Niccolo Dalmasso, Vamsi Potluru, Tucker Balch, Manuela Veloso. <a href="https://arxiv.org/pdf/2410.14029">Conditional Demographic Parity Through Optimal Transport (2022)</a>, <i>NeurIPS Workshop on Algorithmic Fairness through the Lens of Causality and Privacy</i>.</p>
+      <p>Luhao Zhang, Mohsen Ghassemi, Ivan Brugere, Alan Mishle, Niccolo Dalmasso, Vamsi Potluru, Tucker Balch, Manuela Veloso. <a href="https://neurips.cc/virtual/2022/58462">Conditional Demographic Parity Through Optimal Transport (2022)</a>, <i>NeurIPS Workshop on Algorithmic Fairness through the Lens of Causality and Privacy</i>.</p>
     </li>
     <li>
       <p>Luhao Zhang, Jincheng Yang, Rui Gao. <a href="https://arxiv.org/abs/2205.00362">A Simple and General Duality Proof for Wasserstein Distributionally Robust Optimization (2024)</a>, <strong><i>Operations Research</i></strong>, forthcoming. </p>
