--- a/index.html
+++ b/index.html
@@ -32,13 +32,15 @@
                             <!-- <p class="intro-desc"><span>Mathematics Ph.D. Candidate in UT Austin</span></p> -->
                                                 
                             <p class="lead">
-                            Department of IEOR
+                            Assistant Professor
                             <br>
-                            Columbia University
+                            Department of Applied Mathematics and Statistics
                             <br>
-                            500 W. 120th Street
+                            Johns Hopkins University
                             <br>
-                            New York, NY 10027, USA
+                            3400 North Charles Street
+                            <br>
+                            Baltimore, MD 21218, USA
                             </p>
                                                
                         </div>
@@ -138,9 +140,10 @@
 		<div class="content">
 
   <h1 id="about-me">About me</h1>
+  <p>I am an assistant professor at the <a href="https://engineering.jhu.edu/ams/">Department of Applied Mathematics and Statistics</a> at Johns Hopkins University, starting from January 2025.</p>
 
-  <p>I am currently a <strong>Postdoctoral Research Scientist</strong> in the <a href="https://www.ieor.columbia.edu">Department of Industrial Engineering and Operations Research</a> at Columbia University, supervised by <a href="https://www.engineering.columbia.edu/faculty/xunyu-zhou">Prof. Xunyu Zhou</a>.</p>
-  <p>I will join the <a href="https://engineering.jhu.edu/ams/">Department of Applied Mathematics and Statistics</a> at Johns Hopkins University as <strong>Assistant Professor</strong> in January 2025.</p> 
+  <p>I was a Postdoctoral Research Scientist in the <a href="https://www.ieor.columbia.edu">Department of Industrial Engineering and Operations Research</a> at Columbia University from September 2023 to December 2024, supervised by <a href="https://www.engineering.columbia.edu/faculty/xunyu-zhou">Prof. Xunyu Zhou</a>.</p>
+
   <p>I completed my Ph.D. in the <a href="https://www.ma.utexas.edu">Department of Mathematics</a> at the University of Texas at Austin, advised by <a href="https://web.ma.utexas.edu/users/zariphop/index.shtml">Prof. Thaleia Zariphopoulou</a>. 
     <!-- My doctoral committee members include Profs. <a href="https://web.ma.utexas.edu/users/zariphop/index.shtml">Rui Gao</a>, Irene M. Gamba, Mihai Sirbu, and Stathis Tompaidis.</p>   -->
   <p>My research lies at the intersection of data-driven decision making under uncertainty, stochastic and robust optimization, and machine learning. Specifically, 
@@ -166,6 +169,11 @@
     </li>
     <li>
       <p>Luhao Zhang, Mohsen Ghassemi, Ivan Brugere, Alan Mishle, Niccolo Dalmasso, Vamsi Potluru, Tucker Balch, Manuela Veloso. <a href="https://neurips.cc/virtual/2022/58462">Conditional Demographic Parity Through Optimal Transport (2022)</a>, <i>NeurIPS Workshop on Algorithmic Fairness through the Lens of Causality and Privacy</i>.</p>
+      <ul>
+        <li>
+            <p> A <a href= "https://arxiv.org/pdf/2410.14029">conference version</a> is submitted to <i>39th AAAI Conference on Artificial Intelligence (AAAI-25)</i>.</p>
+        </li>
+      </ul>  
     </li>
     <li>
       <p>Luhao Zhang, Jincheng Yang, Rui Gao. <a href="https://arxiv.org/abs/2205.00362">A Simple and General Duality Proof for Wasserstein Distributionally Robust Optimization (2024)</a>, <strong><i>Operations Research</i></strong>, forthcoming. </p>
@@ -192,7 +200,12 @@
       <p>Rui Gao, Jincheng Yang, Luhao Zhang. A Class of Interpretable and Decomposable Multi-period Convex Risk Measures (2024)</a>, preprint. </p>
     </li>
   </ol>
-
+  <h3 id="preprints">Patents</h3>
+  <ol>
+    <li>
+      <p> <a href="https://patents.google.com/patent/US20240303532A1/en">Method and system for obtaining conditional demographic parity through optimal transport in data-driven model (2024)</a>, US 2024/0303532 A1.</p>
+    </li>
+  </ol>
   <!-- <h3 id="talks">Invited Talks</h1>
       <ul>
       <li>
@@ -259,6 +272,9 @@
         </li>
         <li>
           <p> Operations Research</p>
+        </li>
+        <li>
+          <p> Mathematics of Operations Research</p>
       </li>
       <li>
         <p> Management Science</p>
