--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <div class="row">
                         <div class="col-md-8 col-md-offset-2">
                             <div class="social">
-                                <a href="mailto:luhao.zhang@jhu.edu" target=
+                                <a href="#" target=
                                     "_blank"><i class="fa fa-envelope fa-3x"> <span>luhao.zhang@jhu.edu</span></i></a>
                             </div><!-- /social -->
                             <div class="social">
@@ -459,13 +459,14 @@
 		<footer>
 			<div id="footer-container">
 				<!-- <a href="https://www.utexas.edu"><img id="logo" src="https://www.utexas.edu/sites/all/themes/utexas/img/general/logo.svg"></a> -->
-				<a href="https://columbia.edu"><img id="logo" src="image/Columbia_University_Logo-blue.png"></a>
-				<p id="copyright">Copyright &#169 2024 Luhao Zhang</p>
+				<a href="https://engineering.jhu.edu/ams/"><img id="logo" src="ams-logo4.png" style="max-width:18em;filter:invert(88%) sepia(34%) saturate(6324%) hue-rotate(209deg) brightness(98%) contrast(101%)"></a>
+				<!-- <a href="https://columbia.edu"><img id="logo" src="ams-logo3.jpg"></a> -->
+				<p id="copyright">Last updated: January 2025</p>
 
 				<ul>
 					<!-- <li id="utmath"><a href="https://www.ma.utexas.edu/">UT Math</a></li> -->
 					<li><a href="http://arxiv.org/a/zhang_l_22">arXiv</a></li>
-					<li><a href="https://github.com/Luhao-Zhang">GitHub</a></li>
+					<li><a href="https://scholar.google.com/citations?user=aXTW5dkAAAAJ&hl=en&oi=ao">Google Scholar</a></li>
 					<li><a href="https://www.researchgate.net/profile/Luhao_Zhang2">ResearchGate</a></li>
                     <li><a href="https://www.linkedin.com/in/luhao-zhang-4a1673139/">Linkedin</a></li>
 				</ul>
