--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                             
                             <div class="social">
                                 <a href=
-                                "cv.html" target=
+                                "CV_LuhaoZhang_Jan2025.pdf" target=
                                 "_blank"><i class="fa fa-file fa-3x"> <span>CV</span></i></a>
                             </div><!-- /social -->
                         </div><!-- /col-md-8 -->
